OpenWrt 21.02 MM 1.16.6 segfault with T77W968 DW5821e
Is this the right place for OpenWrt related/specific? The thing is with Ubuntu 20.04 and MM 1.16.6, the T77W968 gets initialized without any issues and public Internet is accessible. However with OpenWrt 21.02 I'm getting a segfault with MM 1.16.6.
Logs prior to the segfault:
[29478]: <debug> [1639104322.304864] [modem0] loading UE mode of operation for EPS...
[29478]: <debug> [1639104322.304908] [modem0/ttyUSB0/at] device open count is 2 (open)
[29478]: <debug> [1639104322.304954] [modem0/ttyUSB0/at] --> 'AT+CEMODE?<CR>'
[29478]: <debug> [1639104322.319720] [modem0/ttyUSB0/at] <-- '<CR><LF>+CEMODE: 2<CR><LF><CR><LF>OK<CR><LF>'
[29478]: [/dev/cdc-wdm0] Sent message...
<<<<<< RAW:
<<<<<< length = 48
<<<<<< data = 03:00:00:00:30:00:00:00:0F:00:00:00:01:00:00:00:00:00:00:00:3D:01:DC:C5:FE:F5:4D:05:0D:3A:BE:F7:05:8E:9A:AF:03:00:00:00:00:00:00:00:00:00:00:00
[29478]: [/dev/cdc-wdm0] Sent message (translated)...
<<<<<< Header:
<<<<<< length = 48
<<<<<< type = command (0x00000003)
<<<<<< transaction = 15
<<<<<< Fragment header:
<<<<<< total = 1
<<<<<< current = 0
<<<<<< Contents:
<<<<<< service = 'ms-basic-connect-extensions' (3d01dcc5-fef5-4d05-0d3a-bef7058e9aaf)
<<<<<< cid = 'lte-attach-configuration' (0x00000003)
<<<<<< type = 'query' (0x00000000)
[29478]: <debug> [1639104322.319952] [modem0/ttyUSB0/at] device open count is 1 (close)
[29478]: [/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 208
>>>>>> data = 03:00:00:80:D0:00:00:00:0F:00:00:00:01:00:00:00:00:00:00:00:3D:01:DC:C5:FE:F5:4D:05:0D:3A:BE:F7:05:8E:9A:AF:03:00:00:00:00:00:00:00:A0:00:00:00:03:00:00:00:1C:00:00:00:2C:00:00:00:48:00:00:00:2C:00:00:00:74:00:00:00:2C:00:00:00:03:00:00:00:00:00:00:00:03:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:01:00:00:00:03:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:02:00:00:00:03:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
[29478]: [/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 208
>>>>>> type = command-done (0x80000003)
>>>>>> transaction = 15
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> status error = 'None' (0x00000000)
>>>>>> service = 'ms-basic-connect-extensions' (3d01dcc5-fef5-4d05-0d3a-bef7058e9aaf)
>>>>>> cid = 'lte-attach-configuration' (0x00000003)
>>>>>> Fields:
>>>>>> ConfigurationCount = '3'
>>>>>> Configurations = '{
>>>>>> [0] = {
>>>>>> IpType = '3'
>>>>>> Roaming = '0'
>>>>>> Source = '3'
>>>>>> AccessString = '(null)'
>>>>>> UserName = '(null)'
>>>>>> Password = '(null)'
>>>>>> Compression = '0'
>>>>>> AuthProtocol = '0'
>>>>>> },
>>>>>> [1] = {
>>>>>> IpType = '0'
>>>>>> Roaming = '1'
>>>>>> Source = '3'
>>>>>> AccessString = '(null)'
>>>>>
[29478]: <debug> [1639104322.368602] [modem0] messaging capabilities supported
[29478]: <debug> [1639104322.368633] [modem0] supported storages loaded:
[29478]: <debug> [1639104322.368646] [modem0] mem1 (list/read/delete) storages: 'mt'
[29478]: <debug> [1639104322.368658] [modem0] mem2 (write/send) storages: 'mt'
[29478]: <debug> [1639104322.368670] [modem0] mem3 (reception) storages: 'mt'
[29478]: <debug> [1639104322.368716] [modem0/ttyUSB0/at] device open count is 2 (open)
[29478]: <debug> [1639104322.368737] [modem0/ttyUSB0/at] --> 'AT+CTZU=1<CR>'
[29478]: <debug> [1639104322.382473] [modem0/ttyUSB0/at] <-- '<CR><LF>OK<CR><LF>'
[29478]: <debug> [1639104322.382516] [modem0/ttyUSB0/at] --> 'AT+CCLK?<CR>'
[29478]: <debug> [1639104322.397134] [modem0/ttyUSB0/at] <-- '<CR><LF>+CCLK: "21/12/10,02:45:21+12"<CR><LF><CR><LF>OK<CR><LF>'
[29478]: <debug> [1639104322.397267] [modem0/ttyUSB0/at] device open count is 1 (close)
[29478]: <debug> [1639104322.397370] [modem0] couldn't initialize interface: 'OMA not supported'
[29478]: <debug> [1639104322.397464] [modem0/ttyUSB0/at] device open count is 2 (open)
[29478]: <debug> [1639104322.397523] [modem0/ttyUSB0/at] --> 'ATH<CR>'
[29478]: <debug> [1639104322.405662] [modem0/ttyUSB0/at] <-- '<CR><LF>OK<CR><LF>'
[29478]: <debug> [1639104322.405729] [modem0/ttyUSB0/at] device open count is 3 (open)
[29478]: <debug> [1639104322.405774] [modem0/ttyUSB0/at] device open count is 2 (close)
[29478]: <debug> [1639104322.405817] [modem0/ttyUSB0/at] --> 'AT+CLCC=?<CR>'
[29478]: <debug> [1639104322.420800] [modem0/ttyUSB0/at] <-- '<CR><LF>OK<CR><LF>'
[29478]: <debug> [1639104322.420882] [modem0] periodic call list polling will be used if supported
(ModemManager:29478): GLib-GObject-WARNING **: 05:45:22.420: invalid cast from 'MMBroadbandModemMbimFoxconn' to 'MMSharedQmi'
Segmentation fault