foxconn: firmware info loading only if MBIM-QMUX enabled in libqmi

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/477

(cherry picked from commit 6ec97a29ae79636f3bf63e616e0b3904befa1dbd)